@@ -1,0 +1,4 @@
+galpy.util.bovy_coords.custom_to_pmrapmdec
+===========================================
+
+.. autofunction:: galpy.util.bovy_coords.custom_to_pmrapmdec
